--- a/index.css
+++ b/index.css
@@ -9,24 +9,6 @@ body
    margin: 0;
    padding: 0;
 }
-#wb_Heading1
-{
-   background-color: transparent;
-   background-image: none;
-   border: 0px solid #000000;
-   margin: 0;
-   padding: 0;
-   text-align: left;
-}
-#Heading1
-{
-   color: #000000;
-   font-family: Arial;
-   font-weight: bold;
-   font-size: 32px;
-   margin: 0;
-   text-align: left;
-}
 #wb_Text1 
 {
    background-color: transparent;
@@ -39,10 +21,10 @@ body
 #wb_Text1
 {
    color: #000000;
-   font-family: "Times New Roman";
+   font-family: Arial;
    font-weight: normal;
-   font-size: 16px;
-   line-height: 18px;
+   font-size: 20px;
+   line-height: 22.5px;
 }
 #wb_Text1 p, #wb_Text1 ul
 {
@@ -58,4 +40,71 @@ body
    top: 0;
    width: 100%;
    height: 100%;
+}
+#wb_Text2 
+{
+   background-color: transparent;
+   background-image: none;
+   border: 0px solid #000000;
+   padding: 0;
+   margin: 0;
+   text-align: left;
+}
+#wb_Text2
+{
+   color: #000000;
+   font-family: Arial;
+   font-weight: normal;
+   font-size: 13px;
+   line-height: 16px;
+}
+#wb_Text2 p, #wb_Text2 ul
+{
+   margin: 0;
+   padding: 0;
+}
+#Image2
+{
+   border: 0px solid #000000;
+   padding: 0;
+   margin: 0;
+   left: 0;
+   top: 0;
+   width: 100%;
+   height: 100%;
+}
+#Line1
+{
+   border-color: #A0A0A0;
+   border-style: solid;
+   border-bottom-width: 5px;
+   border-top: 0px;
+   border-left: 0px;
+   border-right: 0px;
+   height: 0 !important;
+   line-height: 0px !important;
+   margin: 0;
+   padding: 0;
+}
+#wb_Text3 
+{
+   background-color: transparent;
+   background-image: none;
+   border: 0px solid #000000;
+   padding: 0;
+   margin: 0;
+   text-align: left;
+}
+#wb_Text3
+{
+   color: #000000;
+   font-family: Arial;
+   font-weight: normal;
+   font-size: 13px;
+   line-height: 16px;
+}
+#wb_Text3 p, #wb_Text3 ul
+{
+   margin: 0;
+   padding: 0;
 }
