--- a/Research.css
+++ b/Research.css
@@ -31,3 +31,125 @@ body
    margin: 0;
    padding: 0;
 }
+#wb_LayoutGrid2
+{
+   clear: both;
+   position: relative;
+   table-layout: fixed;
+   display: table;
+   text-align: center;
+   width: 100%;
+   background-color: #000000;
+   background-image: none;
+   border: 0px solid #CCCCCC;
+   box-sizing: border-box;
+   margin: 0;
+}
+#LayoutGrid2
+{
+   box-sizing: border-box;
+   padding: 10px 15px 10px 15px;
+   margin-right: auto;
+   margin-left: auto;
+}
+#LayoutGrid2 > .row
+{
+   margin-right: -15px;
+   margin-left: -15px;
+}
+#LayoutGrid2 > .row > .col-1, #LayoutGrid2 > .row > .col-2, #LayoutGrid2 > .row > .col-3
+{
+   box-sizing: border-box;
+   font-size: 0px;
+   min-height: 1px;
+   padding-right: 15px;
+   padding-left: 15px;
+   position: relative;
+}
+#LayoutGrid2 > .row > .col-1, #LayoutGrid2 > .row > .col-2, #LayoutGrid2 > .row > .col-3
+{
+   float: left;
+}
+#LayoutGrid2 > .row > .col-1
+{
+   background-color: transparent;
+   background-image: none;
+   border: 0px solid #FFFFFF;
+   width: 16.66666667%;
+   text-align: left;
+}
+#LayoutGrid2 > .row > .col-2
+{
+   background-color: transparent;
+   background-image: none;
+   border: 0px solid #FFFFFF;
+   width: 66.66666667%;
+   text-align: center;
+}
+#LayoutGrid2 > .row > .col-3
+{
+   background-color: transparent;
+   background-image: none;
+   border: 0px solid #FFFFFF;
+   width: 16.66666667%;
+   text-align: right;
+}
+#LayoutGrid2:before,
+#LayoutGrid2:after,
+#LayoutGrid2 .row:before,
+#LayoutGrid2 .row:after
+{
+   display: table;
+   content: " ";
+}
+#LayoutGrid2:after,
+#LayoutGrid2 .row:after
+{
+   clear: both;
+}
+@media (max-width: 480px)
+{
+#LayoutGrid2 > .row > .col-1, #LayoutGrid2 > .row > .col-2, #LayoutGrid2 > .row > .col-3
+{
+   float: none;
+   width: 100%;
+}
+}
+#Breadcrumb2
+{
+   padding: 8px 15px 8px 15px;
+   list-style: none;
+   background-color: #000000;
+   background-image: none;
+   border: 0px solid #C0C0C0;
+   font-family: Arial;
+   font-weight: bold;
+   font-size: 0;
+   margin: 0;
+   text-align: center;
+}
+#Breadcrumb2 > li
+{
+   display: inline-block;
+   font-size: 16px;
+}
+#Breadcrumb2 a
+{
+   color: #FFFFFF;
+   text-decoration: none;
+}
+#Breadcrumb2 a:hover
+{
+   color: #FFFFFF;
+   text-decoration: underline;
+}
+#Breadcrumb2 > .active
+{
+   color: #777777;
+}
+#Breadcrumb2 > li + li:before
+{
+   content: "";
+   padding: 0 10px;
+   color: #C0C0C0;
+}
